--- a/htmlcss/htmlcss(2).html
+++ b/htmlcss/htmlcss(2).html
@@ -16,5 +16,7 @@
     <div class="margin2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dolor iste beatae impedit, vero excepturi cupiditate minus? Quod alias libero eum, consequatur vitae explicabo, temporibus officia odio, repellendus similique quae.</div>
     <br><br>
     <div class="padding">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, aliquid corrupti voluptatum placeat odit illum distinctio repudiandae magni nihil adipisci amet natus saepe, quisquam alias provident voluptas, dolor dolore blanditiis!</div>
+    <p class="rit">Lorem            ipsum dolor sit amet consectetur adipisicing elit. Nemo, a quia exercitationem voluptate sint beatae fuga ipsa quos voluptatibus impedit, neque accusantium dolorem cum non, 
+        quae error amet corporis esse!</p>
 </body>
 </html>
